Rework API design to separate input type from format
- Rename IMAGE_BASE64 to IMAGE
- Introduce DataFormat enum in InferenceString
- Add and update tests